# tools-static-build

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml  windows-msvc.yml
cmake/: RunDockerBuild.cmake  StaticBuild.cmake  TargetMatrix.cmake  ValidateStamps.cmake
docker/busybox/: Dockerfile
docker/curl/: Dockerfile
docker/gdb/: Dockerfile
docker/lstrace/: Dockerfile
docker/nc/: Dockerfile
docker/ncat/: Dockerfile  Dockerfile.msvc
docker/nmap/: Dockerfile  Dockerfile.msvc
docker/socat/: Dockerfile
docker/strace/: Dockerfile
docker/tcpdump/: Dockerfile
docker/toybox/: Dockerfile
docker/wget/: Dockerfile
scripts/: entrypoint.sh
scripts/lib/: common.sh  nmap-common.sh
scripts/tools/: busybox.sh  curl.sh  gdb.sh  lstrace.sh  nc.sh  ncat.sh  nmap.sh  socat.sh  strace.sh  tcpdump.sh  toybox.sh  wget.sh
scripts/windows/: bootstrap.ps1  entrypoint.ps1
scripts/windows/lib/: common.ps1  nmap-common.ps1
scripts/windows/tools/: ncat.ps1  nmap.ps1
